Multiple optimizations and code restructuring
- Training with max leaves
- Code restructuring (e.g. for multiproc)
- Perf comparisons
- Multiple model
- Calibration with median support

--- a/config.ini
+++ b/config.ini
@@ -1,12 +1,13 @@
 ; config.ini
 [lcPep]
-n_jobs = 32
-split_cal = 25
+n_jobs = 6
+split_cal = 10
 dict_cal_divider = 10
 
 [featExtractor]
 lib_path_mod = unimod/
 lib_path_prot_scale = "expasy/"
+lib_path_smiles = "mod_to_smiles/"
 split_size = 5
 verbose = True
 add_sum_feat = True
@@ -27,5 +28,5 @@ random_state = 42
 nfolds = 10
 n_iter_search = 5
 verbose = 10
-n_jobs = 32
+n_jobs = 6
 eval_metric = neg_mean_absolute_error
