--- a/environment.yml
+++ b/environment.yml
@@ -1,107 +1,131 @@
-name: py36
+name: DL
 channels:
-  - rdkit
-  - anaconda
   - defaults
 dependencies:
-  - cmake=3.11.1=h0c2ffe5_1
-  - cudatoolkit=8.0=3
-  - cudnn=6.0=0
-  - freetype=2.8=vc14h17c9bdf_0
-  - icu=58.2=vc14hc45fdbb_0
-  - jpeg=9b=vc14h4d7706e_1
-  - libpng=1.6.32=vc14h5163883_3
-  - libprotobuf=3.5.2=he0781b1_0
-  - pillow=5.1.0=py36h0738816_0
-  - protobuf=3.5.2=py36h6538335_0
-  - qt=5.6.2=vc14h6f8c307_12
-  - sqlite=3.20.1=vc14h7ce8c62_1
-  - tensorflow-gpu=1.1.0=np112py36_0
-  - vc=14.1=h0510ff6_3
-  - vs2015_runtime=15.5.2=3
-  - werkzeug=0.14.1=py36_0
-  - zlib=1.2.11=vc14h1cdd9ab_1
-  - _r-mutex=1.0.0=mro_2
-  - bzip2=1.0.6=hbe05fcf_4
-  - ca-certificates=2018.03.07=0
-  - cairo=1.14.10=ha12b3d8_6
-  - certifi=2018.8.24=py36_1
-  - cycler=0.10.0=py36h009560c_0
-  - h5py=2.7.1=py36he54a1c3_0
-  - hdf5=1.10.1=h98b8871_1
-  - icc_rt=2017.0.4=h97af966_0
-  - intel-openmp=2018.0.0=hd92c6cd_8
-  - keras=2.1.3=py36_0
-  - libtiff=4.0.9=h0f13578_0
-  - libxgboost=0.60=h1133f5d_0
+  - _tflow_select=2.1.0=gpu
+  - absl-py=0.7.1=py37_0
+  - astor=0.7.1=py37_0
+  - attrs=19.1.0=py37_1
+  - backcall=0.1.0=py37_0
+  - blas=1.0=mkl
+  - bleach=3.1.0=py37_0
+  - ca-certificates=2019.5.15=0
+  - certifi=2019.6.16=py37_1
+  - colorama=0.4.1=py37_0
+  - cudatoolkit=10.0.130=0
+  - cudnn=7.6.0=cuda10.0_0
+  - cycler=0.10.0=py37_0
+  - decorator=4.4.0=py37_1
+  - defusedxml=0.6.0=py_0
+  - entrypoints=0.3=py37_0
+  - freetype=2.9.1=ha9979f8_1
+  - gast=0.2.2=py37_0
+  - graphviz=2.38=hfd603c8_2
+  - grpcio=1.16.1=py37h351948d_1
+  - h5py=2.9.0=py37h5e291fa_0
+  - hdf5=1.10.4=h7ebc959_0
+  - icc_rt=2019.0.0=h0cc432a_1
+  - icu=58.2=ha66f8fd_1
+  - intel-openmp=2019.4=245
+  - ipykernel=5.1.1=py37h39e3cac_0
+  - ipython=7.7.0=py37h39e3cac_0
+  - ipython_genutils=0.2.0=py37_0
+  - ipywidgets=7.5.0=py_0
+  - jedi=0.13.3=py37_0
+  - jinja2=2.10.1=py37_0
+  - joblib=0.13.2=py37_0
+  - jpeg=9b=hb83a4c4_2
+  - jsonschema=3.0.1=py37_0
+  - jupyter=1.0.0=py37_7
+  - jupyter_client=5.3.1=py_0
+  - jupyter_console=6.0.0=py37_0
+  - jupyter_core=4.5.0=py_0
+  - keras-applications=1.0.8=py_0
+  - keras-base=2.2.4=py37_0
+  - keras-gpu=2.2.4=0
+  - keras-preprocessing=1.1.0=py_1
+  - kiwisolver=1.1.0=py37ha925a31_0
+  - libpng=1.6.37=h2a8f88b_0
+  - libprotobuf=3.8.0=h7bd577a_0
+  - libsodium=1.0.16=h9d3ae62_0
   - m2w64-gcc-libgfortran=5.3.0=6
   - m2w64-gcc-libs=5.3.0=7
   - m2w64-gcc-libs-core=5.3.0=7
   - m2w64-gmp=6.1.0=2
   - m2w64-libwinpthread-git=5.0.0.4634.697f757=2
-  - matplotlib=2.1.2=py36h016c42a_0
-  - mkl=2018.0.1=h2108138_4
-  - mro-base=3.4.3=0
-  - mro-basics=3.4.3=0
+  - markdown=3.1.1=py37_0
+  - markupsafe=1.1.1=py37he774522_0
+  - matplotlib=3.1.0=py37hc8f65d3_0
+  - mistune=0.8.4=py37he774522_0
+  - mkl=2019.4=245
+  - mkl-service=2.0.2=py37he774522_0
+  - mkl_fft=1.0.12=py37h14836fe_0
+  - mkl_random=1.0.2=py37h343c172_0
+  - mock=3.0.5=py37_0
   - msys2-conda-epoch=20160418=1
-  - numpy=1.12.1=py36hf30b8aa_1
-  - olefile=0.45.1=py36_0
-  - openssl=1.0.2p=hfa6e2cd_0
-  - pandas=0.22.0=py36h6538335_0
-  - patsy=0.5.0=py36_0
-  - pip=9.0.1=py36h226ae91_4
-  - pixman=0.34.0=hcef7cb0_3
-  - py-xgboost=0.60=py36np112h982e225_0
-  - pyparsing=2.2.0=py36h785a196_1
-  - pyqt=5.6.0=py36hb5ed885_5
-  - python=3.6.4=h6538335_1
-  - python-dateutil=2.6.1=py36h509ddcb_1
-  - pytz=2018.3=py36_0
-  - pyyaml=3.12=py36h1d1928f_1
-  - r=3.4.3=mro343_0
-  - r-boot=1.3_20=mro343_0
-  - r-checkpoint=0.4.3=mro343_0
-  - r-class=7.3_14=mro343_0
-  - r-cluster=2.0.6=mro343_0
-  - r-codetools=0.2_15=mro343_0
-  - r-curl=3.1=mro343_0
-  - r-deployrrserve=9.0.0=mro343_0
-  - r-doparallel=1.0.12=mro343_0
-  - r-foreach=1.4.5=mro343_0
-  - r-foreign=0.8_69=mro343_0
-  - r-iterators=1.0.9=mro343_0
-  - r-jsonlite=1.5=mro343_0
-  - r-kernsmooth=2.23_15=mro343_0
-  - r-lattice=0.20_35=mro343_0
-  - r-mass=7.3_47=mro343_0
-  - r-matrix=1.2_12=mro343_0
-  - r-mgcv=1.8_22=mro343_0
-  - r-microsoftr=3.4.3.0097=mro343_0
-  - r-nlme=3.1_131=mro343_0
-  - r-nnet=7.3_12=mro343_0
-  - r-png=0.1_7=mro343_0
-  - r-r6=2.2.2=mro343_0
-  - r-recommended=3.4.3=mro343_0
-  - r-revoioq=8.0.9=mro343_0
-  - r-revomods=11.0.0=mro343_0
-  - r-revoutilsmath=10.0.1=mro343_0
-  - r-rpart=4.1_11=mro343_0
-  - r-runit=0.4.26=mro343_0
-  - r-spatial=7.3_11=mro343_0
-  - r-survival=2.41_3=mro343_0
-  - scikit-learn=0.19.1=py36h53aea1b_0
-  - scipy=1.0.0=py36h1260518_0
-  - seaborn=0.8.1=py36h9b69545_0
-  - setuptools=38.5.1=py36_0
-  - sip=4.18.1=py36h9c25514_2
-  - six=1.11.0=py36h4db2310_1
-  - statsmodels=0.9.0=py36h452e1ab_0
-  - tensorflow=1.1.0=np112py36_0
-  - tk=8.6.7=hcb92d03_3
-  - tornado=4.5.3=py36_0
-  - wheel=0.30.0=py36h6c3ec14_1
-  - wincertstore=0.2=py36h7fe50ca_0
+  - nbconvert=5.5.0=py_0
+  - nbformat=4.4.0=py37_0
+  - notebook=6.0.0=py37_0
+  - numpy=1.16.4=py37h19fb1c0_0
+  - numpy-base=1.16.4=py37hc3f5095_0
+  - openssl=1.1.1c=he774522_1
+  - pandas=0.25.0=py37ha925a31_0
+  - pandoc=2.2.3.2=0
+  - pandocfilters=1.4.2=py37_1
+  - parso=0.5.0=py_0
+  - pickleshare=0.7.5=py37_0
+  - pip=19.1.1=py37_0
+  - prometheus_client=0.7.1=py_0
+  - prompt_toolkit=2.0.9=py37_0
+  - protobuf=3.8.0=py37h33f27b4_0
+  - pydot=1.4.1=py37_0
+  - pygments=2.4.2=py_0
+  - pyparsing=2.4.0=py_0
+  - pyqt=5.9.2=py37h6538335_2
+  - pyreadline=2.1=py37_1
+  - pyrsistent=0.14.11=py37he774522_0
+  - python=3.7.3=h8c8aaf0_1
+  - python-dateutil=2.8.0=py37_0
+  - pytz=2019.1=py_0
+  - pywinpty=0.5.5=py37_1000
+  - pyyaml=5.1.1=py37he774522_0
+  - pyzmq=18.0.0=py37ha925a31_0
+  - qt=5.9.7=vc14h73c81de_0
+  - qtconsole=4.5.2=py_0
+  - scikit-learn=0.21.2=py37h6288b17_0
+  - scipy=1.3.0=py37h29ff71c_0
+  - send2trash=1.5.0=py37_0
+  - setuptools=41.0.1=py37_0
+  - sip=4.19.8=py37h6538335_0
+  - six=1.12.0=py37_0
+  - sqlite=3.29.0=he774522_0
+  - tensorboard=1.13.1=py37h33f27b4_0
+  - tensorflow=1.13.1=gpu_py37h83e5d6a_0
+  - tensorflow-base=1.13.1=gpu_py37h871c8ca_0
+  - tensorflow-estimator=1.13.0=py_0
+  - termcolor=1.1.0=py37_1
+  - terminado=0.8.2=py37_0
+  - testpath=0.4.2=py37_0
+  - tornado=6.0.3=py37he774522_0
+  - traitlets=4.3.2=py37_0
+  - vc=14.1=h0510ff6_4
+  - vs2015_runtime=14.15.26706=h3a45250_4
+  - wcwidth=0.1.7=py37_0
+  - webencodings=0.5.1=py37_1
+  - werkzeug=0.15.4=py_0
+  - wheel=0.33.4=py37_0
+  - widgetsnbextension=3.5.0=py37_0
+  - wincertstore=0.2=py37_0
+  - winpty=0.4.3=4
   - yaml=0.1.7=hc54c509_2
-  - boost=1.63.0=py36_1
-  - rdkit=2017.09.3.0=py36_1
+  - zeromq=4.3.1=h33f27b4_3
+  - zlib=1.2.11=h62dcd97_3
+  - pip:
+    - google-pasta==0.1.7
+    - opt-einsum==3.0.1
+    - tb-nightly==1.15.0a20190806
+    - tensorflow-gpu==2.0.0rc0
+    - tf-estimator-nightly==1.14.0.dev2019080601
+    - wrapt==1.11.2
+    - xgboost==0.90
 
