refactoring of pep_lc to deep_lc addition of windows compatible code

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ datasets/integrated_dataset_filtered.csv
 deep_lc_gui/target/
 install/Miniconda3/
 install/Miniconda3-latest-Linux-x86_64.sh
+install/Miniconda3-latest-Windows-x86_64.exe
