--- a/deep_lc_gui/src/main/resources/deep_lc_gui.properties
+++ b/deep_lc_gui/src/main/resources/deep_lc_gui.properties
@@ -1,10 +1,13 @@
-pep_lc_gui.version = ${project.version}
+deep_lc_gui.version = ${project.version}
 
 #conda_env_location = /home/niels/miniconda3/envs/DL_linux
-conda_env_location = ../install/Miniconda3/envs/DL
+#conda_env_location = ../install/Miniconda3/envs/DL
+#conda_env_location = ../install/Miniconda3
+conda_env_location = C:\\Users\\compomics\\Desktop\\Niels\\DeepLC\\install\\Miniconda3
 
 #deep_lc_location = /home/niels/Documents/Development/Projects/DeepLC
 deep_lc_location = ..
+#deep_lc_location = C:\\Users\\compomics\\Desktop\\Niels\\DeepLC
 
 ##############################
 ###### Input parameters ######
