--- a/deep_lc_gui/pom.xml
+++ b/deep_lc_gui/pom.xml
@@ -81,7 +81,7 @@
                                     <directory>src/main/resources</directory> 
                                     <filtering>true</filtering> 
                                     <includes>
-                                        <include>pep_lc_gui.properties</include>
+                                        <include>deep_lc_gui.properties</include>
                                     </includes>                                                                                                               
                                 </resource>                                
                             </resources>
@@ -117,7 +117,7 @@
                 <configuration>
                     <archive>
                         <manifest>                            
-                            <mainClass>com.compomics.pep_lc_gui.PepLcGuiStarter</mainClass>                          
+                            <mainClass>com.compomics.deep_lc_gui.DeepLcGuiStarter</mainClass>                          
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib</classpathPrefix>
                             <useUniqueVersions>false</useUniqueVersions>
@@ -165,13 +165,20 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.4</version>
+            <version>2.6</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-configuration/commons-configuration -->
         <dependency>
             <groupId>commons-configuration</groupId>
             <artifactId>commons-configuration</artifactId>
             <version>1.10</version>
-        </dependency>        
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.9</version>
+        </dependency>       
     </dependencies>
     
     <repositories>
