--- a/deep_lc_gui/src/main/resources/log4j.properties
+++ b/deep_lc_gui/src/main/resources/log4j.properties
@@ -4,7 +4,7 @@
 
 # Root Logger option
 
-log4j.rootLogger=info, gui
+log4j.rootLogger=info, stdout, gui
 
 #log4j.logger.com.compomics.moff.gui=info, stdout, gui
 
@@ -16,7 +16,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 log4j.additivity.stdout=false
 
 ###### log to LogTextAreaAppender ###
-log4j.appender.gui=com.compomics.pep_lc_gui.view.LogTextAreaAppender
+log4j.appender.gui=com.compomics.deep_lc_gui.view.LogTextAreaAppender
 log4j.appender.gui.Threshold=info
 log4j.appender.gui.ImmediateFlush=true
 log4j.appender.gui.layout=org.apache.log4j.PatternLayout
