--- a/deep_lc_gui/src/main/resources/deep_lc_gui.properties
+++ b/deep_lc_gui/src/main/resources/deep_lc_gui.properties
@@ -1,12 +1,19 @@
 deep_lc_gui.version = ${project.version}
 
+# Linux absolute path
 #conda_env_location = /home/niels/miniconda3/envs/DL_linux
+# Linux relative path
 #conda_env_location = ../install/Miniconda3/envs/DL
-#conda_env_location = ../install/Miniconda3
-conda_env_location = C:\\Users\\compomics\\Desktop\\Niels\\DeepLC\\install\\Miniconda3
+# Windows relative path
+conda_env_location = ../install/Miniconda3
+# Windows absolute path
+#conda_env_location = C:\\Users\\compomics\\Desktop\\Niels\\DeepLC\\install\\Miniconda3
 
+# Linux absolute path
 #deep_lc_location = /home/niels/Documents/Development/Projects/DeepLC
+# Linux/Windows relative path
 deep_lc_location = ..
+# Windows absolute path
 #deep_lc_location = C:\\Users\\compomics\\Desktop\\Niels\\DeepLC
 
 ##############################
