--- a/deep_lc_gui/src/main/resources/log4j.properties
+++ b/deep_lc_gui/src/main/resources/log4j.properties
@@ -4,7 +4,7 @@
 
 # Root Logger option
 
-log4j.rootLogger=info, stdout, gui
+log4j.rootLogger=info, gui
 
 #log4j.logger.com.compomics.moff.gui=info, stdout, gui
 
