--- a/deep_lc_gui/pom.xml
+++ b/deep_lc_gui/pom.xml
@@ -38,7 +38,7 @@
             </plugin>
         
             <!-- Dependency plugin -->
-            <plugin>
+<!--            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <version>2.10</version>
@@ -58,7 +58,7 @@
                         </configuration>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin>-->
             
             <!-- Resources plugin -->
             <plugin>
@@ -74,7 +74,7 @@
                         </goals>
                         <configuration>
                             <outputDirectory>
-                                ${project.build.directory}/${project.artifactId}-${project.version}/resources
+                                ${project.build.directory}/${project.artifactId}-${project.version}
                             </outputDirectory>
                             <resources>
                                 <resource>
@@ -110,7 +110,7 @@
             </plugin>                                                                                   
             
             <!-- Jar plugin -->
-            <plugin>
+            <!--            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>2.6</version>
@@ -126,25 +126,28 @@
                     <outputDirectory>${project.build.directory}/${project.artifactId}-${project.version}
                     </outputDirectory>
                 </configuration>
-            </plugin>
+            </plugin>-->
             
-            <!-- Enable zipping of a target folder (must be an src/main/assembly folder with zip.xml) -->
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.6</version>
-                <configuration>
-                    <descriptors>
-                        <descriptor>src/main/assembly/zip.xml</descriptor>
-                    </descriptors>
-                    <appendAssemblyId>false</appendAssemblyId>
-                </configuration>
+                <version>3.1.1</version>
                 <executions>
                     <execution>
-                        <id>make-assembly</id>
                         <phase>package</phase>
                         <goals>
                             <goal>single</goal>
                         </goals>
+                        <configuration>
+                            <archive>
+                                <manifest>
+                                    <mainClass>com.compomics.deep_lc_gui.DeepLcGuiStarter</mainClass>
+                                </manifest>
+                            </archive>
+                            <descriptorRefs>
+                                <descriptorRef>jar-with-dependencies</descriptorRef>
+                            </descriptorRefs>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
