--- a/deep_lc_gui/src/main/resources/deep_lc_gui.properties
+++ b/deep_lc_gui/src/main/resources/deep_lc_gui.properties
@@ -1,20 +1,18 @@
 deep_lc_gui.version = ${project.version}
 
-# Linux absolute path
-#conda_env_location = /home/niels/miniconda3/envs/DL_linux
-# Linux relative path
-#conda_env_location = ../install/Miniconda3/envs/DL
-# Windows relative path
-conda_env_location = ../install/Miniconda3
-# Windows absolute path
-#conda_env_location = C:\\Users\\compomics\\Desktop\\Niels\\DeepLC\\install\\Miniconda3
+# Linux env path
+#conda_env_location_linux = /home/niels/miniconda3/envs/DL_linux
+conda_env_location_linux = ../install/Miniconda3/envs/DL
+# Windows env path
+#conda_env_location_windows = C:\\Users\\compomics\\Desktop\\Niels\\DeepLC\\install\\Miniconda3
+conda_env_location_windows = ../install/Miniconda3
 
-# Linux absolute path
-#deep_lc_location = /home/niels/Documents/Development/Projects/DeepLC
-# Linux/Windows relative path
-deep_lc_location = ..
-# Windows absolute path
-#deep_lc_location = C:\\Users\\compomics\\Desktop\\Niels\\DeepLC
+# Linux deep_lc path
+#deep_lc_location_linux = /home/niels/Documents/Development/Projects/DeepLC
+deep_lc_location_linux = ..
+# Windows deep_lc path
+#deep_lc_location_windows = C:\\Users\\compomics\\Desktop\\Niels\\DeepLC
+deep_lc_location_windows = ..
 
 ##############################
 ###### Input parameters ######
@@ -23,4 +21,4 @@ deep_lc_location = ..
 dictionary_divider = 10
 number_of_threads = 8
 split_calibration = 50
-batch_number = 5000
+batch_number = 50000
