--- a/deep_lc_gui/src/main/resources/deep_lc_gui.properties
+++ b/deep_lc_gui/src/main/resources/deep_lc_gui.properties
@@ -1,17 +1,17 @@
 deep_lc_gui.version = ${project.version}
 
-# Linux env path
-#conda_env_location_linux = /home/niels/miniconda3/envs/DL_linux
+# Linux env path, relative or absolute
+#conda_env_location_linux = /home/user/miniconda3/envs/DL_linux
 conda_env_location_linux = ../install/Miniconda3/envs/DL
-# Windows env path
-#conda_env_location_windows = C:\\Users\\compomics\\Desktop\\Niels\\DeepLC\\install\\Miniconda3
+# Windows env path, relative or absolute
+#conda_env_location_windows = C:\\Users\\compomics\\Desktop\\User\\DeepLC\\install\\Miniconda3
 conda_env_location_windows = ../install/Miniconda3
 
-# Linux deep_lc path
-#deep_lc_location_linux = /home/niels/Documents/Development/Projects/DeepLC
+# Linux deep_lc path, relative or absolute
+#deep_lc_location_linux = /home/user/Documents/Development/Projects/DeepLC
 deep_lc_location_linux = ..
-# Windows deep_lc path
-#deep_lc_location_windows = C:\\Users\\compomics\\Desktop\\Niels\\DeepLC
+# Windows deep_lc path, relative or absolute
+#deep_lc_location_windows = C:\\Users\\compomics\\Desktop\\User\\DeepLC
 deep_lc_location_windows = ..
 
 ##############################
