Expand README, modify default model usage, move example datasets...

--- a/config.ini
+++ b/config.ini
@@ -1,13 +1,13 @@
 ; config.ini
-[lcPep]
+[DeepLC]
 n_jobs = 8
 split_cal = 10
 dict_cal_divider = 10
 
 [featExtractor]
-lib_path_mod = unimod/
-lib_path_prot_scale = "expasy/"
-lib_path_smiles = "mod_to_smiles/"
+lib_path_mod = deeplc/unimod/
+lib_path_prot_scale = "deeplc/expasy/"
+lib_path_smiles = "deeplc/mod_to_smiles/"
 split_size = 5
 verbose = True
 add_sum_feat = True
