--- a/deeplc_gui/src/main/resources/log4j.properties
+++ b/deeplc_gui/src/main/resources/log4j.properties
@@ -16,7 +16,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c{1}:%L - %m%n
 log4j.additivity.stdout=false
 
 ###### log to LogTextAreaAppender ###
-log4j.appender.gui=com.compomics.deep_lc_gui.view.LogTextAreaAppender
+log4j.appender.gui=com.compomics.deeplc_gui.view.LogTextAreaAppender
 log4j.appender.gui.Threshold=info
 log4j.appender.gui.ImmediateFlush=true
 log4j.appender.gui.layout=org.apache.log4j.PatternLayout
