increased pom version

--- a/deeplc_gui/pom.xml
+++ b/deeplc_gui/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.compomics</groupId>
     <artifactId>deeplc_gui</artifactId>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
     <packaging>jar</packaging>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -123,7 +123,7 @@
                             <outputDirectory>.</outputDirectory>
                             <archive>
                                 <manifest>
-                                    <mainClass>com.compomics.deep_lc_gui.DeepLcGuiStarter</mainClass>
+                                    <mainClass>com.compomics.deeplc_gui.DeepLcGuiStarter</mainClass>
                                 </manifest>
                             </archive>
                             <descriptorRefs>
