--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,6 +18,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel twine
+    - name: Copy file
+      uses: canastro/copy-action@0.0.2
+      with:
+        source: deeplc/mods 
+        # Target file
+        target: deeplc_gui
     - name: Zip GUI directory
       uses: thedoctor0/zip-release@master
       with:
