--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,12 +18,13 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel twine
+        action "Setup"
+
     - name: Copy file
-      uses: canastro/copy-action@0.0.2
+      uses: jdickey/bash@v.1.1.1
       with:
-        source: deeplc/mods 
-        # Target file
-        target: deeplc_gui
+        args: '["cp -r deeplc/mods deeplc_gui"]'
+
     - name: Zip GUI directory
       uses: thedoctor0/zip-release@master
       with:
