--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,12 +18,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install setuptools wheel twine
-        action "Setup"
 
-    - name: Copy file
-      uses: jdickey/bash@v.1.1.1
-      with:
-        args: '["cp -r deeplc/mods deeplc_gui"]'
+    - name: Copy models models to GUI folder
+      run: |
+        cp -r deeplc/mods deeplc_gui
 
     - name: Zip GUI directory
       uses: thedoctor0/zip-release@master
