--- a/.github/workflows/ghcr-try-out.yml
+++ b/.github/workflows/ghcr-try-out.yml
@@ -7,12 +7,14 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: 'Get Previous tag'
-      id: previoustag
-      uses: "WyriHaximus/github-action-get-previous-tag@v1"
+    - id: latest_release
+      uses: pozetroninc/github-action-get-latest-release@master
+      with:
+        owner: compomics
+        repo: DeepLC
     - name: Build and push to ghcr.io
       uses: docker/build-push-action@v2
       with:
         context: streamlit
         push: true
-        tags: ghcr.io/compomics/deeplc-streamlit:${{ steps.previoustag.outputs.tag }}
+        tags: ghcr.io/compomics/deeplc-streamlit:${{ steps.latest_release.outputs.release }}
