--- a/.github/workflows/ghcr-try-out.yml
+++ b/.github/workflows/ghcr-try-out.yml
@@ -12,6 +12,12 @@ jobs:
       with:
         owner: compomics
         repo: DeepLC
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v1
+      with:
+        registry: ghcr.io
+        username: ${{ github.repository_owner }}
+        password: ${{ secrets.GITHUB_TOKEN }}
     - name: Build and push to ghcr.io
       uses: docker/build-push-action@v2
       with:
