--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -51,3 +51,26 @@ jobs:
       run: |
         python setup.py sdist bdist_wheel
         twine upload dist/*
+
+  build-streamlit-image:
+    runs-on: ubuntu-latest
+    needs: publish
+    steps:
+    - uses: actions/checkout@v2
+    - id: latest_release
+      uses: pozetroninc/github-action-get-latest-release@master
+      with:
+        owner: compomics
+        repo: DeepLC
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v1
+      with:
+        registry: ghcr.io
+        username: ${{ github.repository_owner }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    - name: Build and push to ghcr.io
+      uses: docker/build-push-action@v2
+      with:
+        context: streamlit
+        push: true
+        tags: ghcr.io/compomics/deeplc-streamlit:${{ steps.latest_release.outputs.release }}
