Switch to conda, refine librarypath implementation
- Switched to conda-based environment (using conda-pack for smaller final image), as pip tensorflow requires AVS/AVS2 instructions while the conda version does not (see https://github.com/deepforge-dev/deepforge/issues/1561)
- First check if library path from env variable exists

--- a/streamlit/Dockerfile
+++ b/streamlit/Dockerfile
@@ -1,6 +1,18 @@
-FROM python:3.8-buster
+FROM continuumio/miniconda3:4.9.2 AS build
+COPY environment.yml .
+RUN conda env create -f environment.yml && \
+    conda install -c conda-forge conda-pack && \
+    conda-pack -n deeplc-streamlit -o /tmp/env.tar && \
+    mkdir /venv && cd /venv && tar xf /tmp/env.tar && \
+    rm /tmp/env.tar && \
+    /venv/bin/conda-unpack
+
+FROM debian:buster-slim AS runtime
+COPY --from=build /venv /venv
 COPY . .
-RUN pip install -r requirements.txt
+ENV VIRTUAL_ENV=/venv
+ENV PATH="$VIRTUAL_ENV/bin:$PATH"
+RUN pip install "deeplc>=0.1.29"
 ENV DEEPLC_LIBRARY_PATH="/tmp/deeplc_library.txt"
 EXPOSE 8501
 CMD ["streamlit", "run", "deeplc_streamlit.py"]
