--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -73,4 +73,6 @@ jobs:
       with:
         context: streamlit
         push: true
-        tags: ghcr.io/compomics/deeplc-streamlit:${{ steps.latest_release.outputs.release }}
+        tags:
+          - ghcr.io/compomics/deeplc-streamlit:${{ steps.latest_release.outputs.release }}
+          - ghcr.io/compomics/deeplc-streamlit:latest
