Add readme, use workdir in dockerfile

--- a/streamlit/Dockerfile
+++ b/streamlit/Dockerfile
@@ -1,5 +1,5 @@
 FROM continuumio/miniconda3:4.9.2 AS build
-COPY environment.yml .
+COPY environment.yml /
 RUN conda env create -f environment.yml && \
     conda install -c conda-forge conda-pack && \
     conda-pack -n deeplc-streamlit -o /tmp/env.tar && \
@@ -8,10 +8,11 @@ RUN conda env create -f environment.yml && \
     /venv/bin/conda-unpack
 
 FROM debian:buster-slim AS runtime
+WORKDIR /deeplc
 COPY --from=build /venv /venv
-COPY . .
 ENV VIRTUAL_ENV=/venv
 ENV PATH="$VIRTUAL_ENV/bin:$PATH"
+COPY . /deeplc
 RUN pip install "deeplc>=0.1.29"
 ENV DEEPLC_LIBRARY_PATH="/tmp/deeplc_library.txt"
 EXPOSE 8501
