--- a/streamlit/.streamlit/config.toml
+++ b/streamlit/.streamlit/config.toml
@@ -16,4 +16,4 @@ primaryColor="#763737"
 backgroundColor="#FFFFFF"
 secondaryBackgroundColor="#f2f2f2"
 textColor="#262730"
-font="sans-serif"
+font="sans serif"
