--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install flake8 pytest scikit-learn
+        pip install flake8 pytest
         pip install --editable .
     - name: Lint with flake8
       run: |
