Unify GUI and CLI argument parsing

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
 include deeplc/expasy/*
 include deeplc/mod_to_smiles/*
 include deeplc/mods/*
+include deeplc/package_data/*
 include deeplc/unimod/*
 include deeplc/aa_comp_rel.csv
