Try pyinstaller and innosetup in action (2)

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,10 +1,9 @@
 name: Publish to PyPI and GitHub release
 
 on:
-  commit:
   push:
-    tags:
-    - 'v*'
+  #   tags:
+  #   - 'v*'
 
 jobs:
   python-package:
