--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -52,7 +52,7 @@ jobs:
     - name: Test built DeepLC exe
       run: dist/deeplc/deeplc.exe --ignore-gooey --help
     - name: Run Inno Setup
-      run: ISCC.exe ./deeplc_innosetup.iss
+      run: ISCC.exe ./deeplc_innosetup.iss /DMyAppVersion=$(python setup.py --version)
     - name: Upload installer
       uses: actions/upload-artifact@v2
       with:
@@ -77,18 +77,16 @@ jobs:
   #       CHANGELOG_FILE: "CHANGELOG.md"
   #     with:
   #       args: |
-  #         dist/*.exe
+  #         dist/*
 
   # build-streamlit-image:
   #   runs-on: ubuntu-latest
   #   needs: python-package
   #   steps:
   #   - uses: actions/checkout@v2
-  #   - id: latest_release
-  #     uses: pozetroninc/github-action-get-latest-release@master
-  #     with:
-  #       owner: compomics
-  #       repo: DeepLC
+  #   - name: Get release version number
+  #     id: release_version
+  #     run: echo ::set-output name=version::$(python setup.py --version)
   #   - name: Login to GitHub Container Registry
   #     uses: docker/login-action@v1
   #     with:
@@ -101,5 +99,5 @@ jobs:
   #       context: streamlit
   #       push: true
   #       tags: |
-  #         ghcr.io/compomics/deeplc-streamlit:${{ steps.latest_release.outputs.release }}
+  #         ghcr.io/compomics/deeplc-streamlit:${{ steps.release_version.outputs.version }}
   #         ghcr.io/compomics/deeplc-streamlit:latest
