--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,6 +19,11 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Install GTK+ 3.0 (Gooey dependency)
+      if: matrix.os == 'ubuntu-latest'
+      run: |
+        sudo apt update
+        sudo apt install libgtk-3-dev python-wxgtk3.0-dev
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
