--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,8 +2,8 @@ name: Publish to PyPI and GitHub release
 
 on:
   push:
-  #   tags:
-  #   - 'v*'
+    tags:
+    - 'v*'
 
 jobs:
   python-package:
@@ -17,14 +17,17 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install setuptools wheel twine
+        pip install setuptools wheel flake8 twine
+    - name: Check for syntax errors
+      run: |
+        flake8 ./deeplc --count --select=E9,F63,F7,F82 --show-source --statistics
     - name: Build and publish to PyPI
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
         python setup.py sdist bdist_wheel
-#        twine upload dist/*
+        twine upload dist/*
     - name: Upload compiled wheels
       uses: actions/upload-artifact@v2
       with:
@@ -32,7 +35,7 @@ jobs:
         path: dist/*.whl
 
   windows-installer:
-    runs-on: windows-2022
+    runs-on: windows-latest
     needs: python-package
     steps:
     - uses: actions/checkout@v2
@@ -59,45 +62,45 @@ jobs:
         name: dist
         path: dist/*.exe
 
-  # git-release:
-  #   runs-on: ubuntu-latest
-  #   needs: windows-installer
-  #   steps:
-  #   - name: Download installer
-  #     uses: actions/download-artifact@v2
-  #     with:
-  #       name: dist
-  #       path: dist
-  #   - name: Create GitHub Release
-  #     uses: docker://antonyurchenko/git-release:v4
-  #     env:
-  #       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  #       DRAFT_RELEASE: "false"
-  #       PRE_RELEASE: "false"
-  #       CHANGELOG_FILE: "CHANGELOG.md"
-  #     with:
-  #       args: |
-  #         dist/*
+  git-release:
+    runs-on: ubuntu-latest
+    needs: [python-package, windows-installer]
+    steps:
+    - name: Download installer
+      uses: actions/download-artifact@v2
+      with:
+        name: dist
+        path: dist
+    - name: Create GitHub Release
+      uses: docker://antonyurchenko/git-release:v4
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        DRAFT_RELEASE: "false"
+        PRE_RELEASE: "false"
+        CHANGELOG_FILE: "CHANGELOG.md"
+      with:
+        args: |
+          dist/*
 
-  # build-streamlit-image:
-  #   runs-on: ubuntu-latest
-  #   needs: python-package
-  #   steps:
-  #   - uses: actions/checkout@v2
-  #   - name: Get release version number
-  #     id: release_version
-  #     run: echo ::set-output name=version::$(python setup.py --version)
-  #   - name: Login to GitHub Container Registry
-  #     uses: docker/login-action@v1
-  #     with:
-  #       registry: ghcr.io
-  #       username: ${{ github.repository_owner }}
-  #       password: ${{ secrets.GITHUB_TOKEN }}
-  #   - name: Build and push to ghcr.io
-  #     uses: docker/build-push-action@v2
-  #     with:
-  #       context: streamlit
-  #       push: true
-  #       tags: |
-  #         ghcr.io/compomics/deeplc-streamlit:${{ steps.release_version.outputs.version }}
-  #         ghcr.io/compomics/deeplc-streamlit:latest
+  build-streamlit-image:
+    runs-on: ubuntu-latest
+    needs: python-package
+    steps:
+    - uses: actions/checkout@v2
+    - name: Get release version number
+      id: release_version
+      run: echo ::set-output name=version::$(python setup.py --version)
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v1
+      with:
+        registry: ghcr.io
+        username: ${{ github.repository_owner }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    - name: Build and push to ghcr.io
+      uses: docker/build-push-action@v2
+      with:
+        context: streamlit
+        push: true
+        tags: |
+          ghcr.io/compomics/deeplc-streamlit:${{ steps.release_version.outputs.version }}
+          ghcr.io/compomics/deeplc-streamlit:latest
