--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -85,32 +85,23 @@ jobs:
     runs-on: ubuntu-latest
     needs: python-package
     steps:
-    - name: Download compiled wheels
-      uses: actions/download-artifact@v2
-      with:
-        name: dist
-        path: dist/
-    - run: ls ./
-    - run: ls ./dist
     - uses: actions/checkout@v2
-    - name: Get release version number
-      id: release_version
-      run: echo ::set-output name=version::$(python setup.py --version)
+    - id: latest_release
+      uses: pozetroninc/github-action-get-latest-release@master
+      with:
+        owner: compomics
+        repo: DeepLC
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v1
       with:
-        args: install innosetup -y --allow-unofficial --force
-    - name: Run pyinstaller
-      run: pyinstaller ./deeplc.spec --clean --noconfirm
-    - name: Test built DeepLC exe
-      run: dist/deeplc/deeplc.exe --ignore-gooey --help
-    - name: Run Inno Setup
-      run: ISCC.exe ./deeplc_innosetup.iss
-    - name: Upload installer
-      uses: actions/upload-artifact@v2
+        registry: ghcr.io
+        username: ${{ github.repository_owner }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    - name: Build and push to ghcr.io
+      uses: docker/build-push-action@v2
       with:
         context: streamlit
         push: true
         tags: |
-          ghcr.io/compomics/deeplc-streamlit:${{ steps.release_version.outputs.version }}
+          ghcr.io/compomics/deeplc-streamlit:${{ steps.latest_release.outputs.release }}
           ghcr.io/compomics/deeplc-streamlit:latest
