Move plot code to separate module; add baseline file to manifest

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,3 +4,4 @@ include deeplc/mods/*
 include deeplc/package_data/**/*
 include deeplc/unimod/*
 include deeplc/aa_comp_rel.csv
+include deeplc/baseline_performance/*
