--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install flake8 pytest
-          pip install --editable .
+          pip install --editable .[test]
       - name: Lint with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
