Replace pygam with scikit-learn

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ dependencies = [
     "numpy>=1.17,<2",
     "pandas>=0.25",
     "h5py>=2.10.0,<4",
-    "pygam>=0.8.0",
+    "scikit-learn>=1.2.0",
     "deeplcretrainer>=1,<2",
     "psm_utils>=0.2.3",
     "hdf5plugin>=4.1.1",
